Tried to fix text overflow in navs

--- a/public/styles.css
+++ b/public/styles.css
@@ -111,8 +111,8 @@ nav li p {
 }
 
 nav li p.small {
-  font-size: 0.75em;
-  margin-top: 0.25em;
+  font-size: 0.8em;
+  padding-top: 0.3em;
 }
 
 nav a {
